# cmingus

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  libtool  mingus  mingus.c  mingw.sh  run_tests.sh
core/: chords.c  chords.h  diatonic.c  diatonic.h  intervals.c  intervals.h  notes.c  notes.h  progressions.h
programs/: Makefile.am  Makefile.in  interval.c  note.c  triad.c
src/: Makefile.am  Makefile.in  diatonic.h  mingus_container_tests.cpp  mingus_core_tests.c  mingus_midi_tests.cpp  mingus_unit_tests.c  progressions.c  progressions.h
src/containers/: .Note.cpp.swp  .Note.h.swp  Bar.cpp  Bar.h  BarEntry.cpp  BarEntry.h  Makefile.am  Makefile.in  Note.cpp  Note.h  NoteContainer.cpp  NoteContainer.h  Track.cpp  Track.h  containers.h
src/core/: Makefile.am  Makefile.in  chords.c  chords.h  core.h  diatonic.c  intervals.h  meter.c  meter.h  notes.c  notes.h  value.c  value.h
src/midi/: Makefile.am  Makefile.in  fluidsynth.cpp  midi.h  synth.h
